--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <center> <img src=some1am1024.jpg alt="Some1"/> </center>
+    <center> <img src=some1am1024.jpg alt="Some1.ch"/> </center>
 </body>
 
 </html>
